@@ -1,0 +1,35 @@
+/******************************************************************************
+ *
+ * mod_gearman - distribute checks with gearman
+ *
+ * Copyright (c) 2010 Sven Nierlein - sven.nierlein@consol.de
+ *
+ * This file is part of mod_gearman.
+ *
+ *  mod_gearman is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  mod_gearman is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with mod_gearman.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ *****************************************************************************/
+
+#include <stdlib.h>
+#include <signal.h>
+#include <curses.h>
+#include "common.h"
+
+mod_gm_opt_t *mod_gm_opt;
+
+int main (int argc, char **argv);
+void clean_exit(int sig);
+void print_usage(void);
+void print_version(void);
+void print_stats(char * hostname);
